cursive-bootstrap/tests/ui/E-CON/E-CON-0210.cursive
// RUN: compile-fail
// DIAG: E-CON-0210
// SPEC: 8.9
// DESC: yield outside async-returning procedure

procedure not_async() -> i32 {
    yield 1  //~ ERROR E-CON-0210: yield outside async procedure
    return 0
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
